--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,23 +10,26 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DontSlack">
         <activity
+            android:name=".HomePage"
+            android:exported="false" />
+        <activity
             android:name=".SignUp"
             android:exported="false" />
-        <!--<activity
+        <!--
+<activity
             android:name=".Login"
-            android:exported="false" /> -->
-
+            android:exported="false" />
+        -->
         <activity
             android:name=".Login"
             android:exported="true"
-            android:label="Don't Slack">
+            android:label="Don&apos;t Slack">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
 
 </manifest>
