Implemented add new task and display it in recycler view. Fixes some bugs in DBHandler.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DontSlack">
         <activity
+            android:name=".AddTaskPage"
+            android:exported="false" />
+        <activity
             android:name=".ToDoList"
             android:exported="false" />
         <activity
