Implemented view task details and edit task details

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DontSlack">
         <activity
+            android:name=".ToDOListEditTaskDetails"
+            android:exported="false" />
+        <activity
             android:name=".ToDoListTaskDetails"
             android:exported="false" />
         <activity
