--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,9 @@
         <activity
             android:name=".Notes"
             android:exported="false" />
+        <activity
+            android:name=".NoteEditorActivity"
+            android:exported="false" />
         <!--
 <activity
             android:name=".Login"
