Notes Editor Fix

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,9 @@
         <activity
             android:name=".Calendar"
             android:exported="false" />
+        <activity
+            android:name=".NoteEditorActivity"
+            android:exported="false" />
         <!--
 <activity
             android:name=".Login"
