Implemented view notification details feature. User can now view daily objective upon clicking view details button in notification. In this view daily objective will have 2 categories: Task and Event. Upon click a category will display all item that have to be done by today date.
Left to be implement:
List View to display all item that have to be done by today date.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DontSlack">
         <activity
+            android:name=".NotificationDetailsFragment"
+            android:exported="false" />
+        <activity
             android:name=".NotificationDetails"
             android:exported="false" />
         <activity
