Added timer to AndroidManifest.xml

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -96,6 +96,11 @@
             android:exported="false"
             android:screenOrientation="portrait" />
         <activity
+            android:name=".Timer"
+            android:configChanges="orientation"
+            android:exported="false"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".NoteEditorActivity"
             android:configChanges="orientation"
             android:exported="false"
