--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,11 +6,11 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "sg.edu.np.mad.dontslack"
+        applicationId 'sg.edu.np.mad.dontslackV2'
         minSdk 21
         targetSdk 30
-        versionCode 2
-        versionName "1.0"
+        versionCode 4
+        versionName '3.0'
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
